--- a/form.html
+++ b/form.html
@@ -6,7 +6,7 @@
     <title>Exercício EBAC</title>
 </head>
 <body>
-    <h1>formulário</h1>
+    <h1>Formulário</h1>
     <form id="formulario">
         <label>Primeiro numero :</label>
         <input id="one" required type="number" placeholder="Campo A" />
